feat: AI completion

--- a/backend/golang/ai/nlp.ipynb
+++ b/backend/golang/ai/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.preprocessing import MinMaxScaler\n"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import joblib\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,30 +35,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Alphabet’s Revenue Boosted by Cloud Computing, Search Ads',\n",
-       " \"FTC orders 8 companies to provide information on 'surveillance pricing' practices\",\n",
-       " 'Aussie Risks Bigger Losses Versus Yen as CPI Coincides With BOJ',\n",
-       " 'Canadian Wildfires Threaten Oil Output, Prompt Evacuations',\n",
-       " 'Tech Falls in Late Hours as Earnings Underwhelm: Markets Wrap',\n",
-       " 'Boeing resumes deliveries of 737 MAX airplanes to China',\n",
-       " 'Embraer bumps up estimate for global traffic growth in next two decades',\n",
-       " 'How a perfect storm sent church insurance rates skyrocketing']"
+       "['Tesla slides after earnings fall short',\n",
+       " 'Ford stock tumbles after big earnings miss',\n",
+       " \"Krugman: Fed rate cut 'shouldn't matter much' in election\",\n",
+       " \"'Fear gauge' hits 3-month high as stocks sell off\",\n",
+       " \"Warner Bros. loses 'critical' NBA rights in $77 billion deal\",\n",
+       " 'One year after it disappeared, Overstock.com is coming back']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#retrieve the information from \"hero-headlines hero-latest-news yf-13r5oof\" class of the div tag\n",
-    "headlines = soup.find_all('div', class_='hero-headlines hero-latest-news yf-13r5oof')\n",
+    "headlines = soup.find_all('div', class_='hero-headlines hero-second-col yf-13r5oof')\n",
     "headlines = headlines[0].find_all('h3')\n",
     "headlines = [headline.text for headline in headlines]\n",
     "headlines[1:]"
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +154,7 @@
        "4                                   OI  Over 21.37            1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +177,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +217,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +273,7 @@
        "'              precision    recall  f1-score   support\\n\\n          -1       0.76      0.70      0.73       427\\n           1       0.72      0.77      0.75       416\\n\\n    accuracy                           0.74       843\\n   macro avg       0.74      0.74      0.74       843\\nweighted avg       0.74      0.74      0.74       843\\n'"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -335,28 +334,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.03979261, -0.02636505,  0.02917938, ...,  0.00992715,\n",
-       "        -0.02437682, -0.00392045],\n",
-       "       [-0.02019515, -0.02305547, -0.02824178, ..., -0.00375418,\n",
-       "        -0.01577107,  0.01867069],\n",
-       "       [-0.03196119, -0.00024379, -0.02240189, ..., -0.01452055,\n",
-       "        -0.01435348, -0.00330689],\n",
-       "       ...,\n",
-       "       [ 0.0017534 , -0.02372099,  0.03179681, ...,  0.02396017,\n",
-       "         0.02556407,  0.00353669],\n",
-       "       [-0.01323737, -0.02190926, -0.01689742, ..., -0.00143787,\n",
-       "        -0.00065477, -0.01119056],\n",
-       "       [ 0.01855049, -0.01775123, -0.02129632, ..., -0.00076421,\n",
-       "        -0.00555612, -0.00355798]])"
+       "['nb_model.pkl']"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#save the model\n",
+    "joblib.dump(nb_model, 'nb_model.pkl')\n",
+    "joblib.dump(knnModel, 'knn_model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.00072856, -0.06871434, -0.04320753, ...,  0.03365227,\n",
+       "        -0.00196457,  0.01583406],\n",
+       "       [-0.0265568 , -0.05101701,  0.02133052, ...,  0.02090512,\n",
+       "        -0.00299296,  0.02222688],\n",
+       "       [-0.04785164,  0.0178241 ,  0.0280527 , ..., -0.00452249,\n",
+       "         0.01070332, -0.01771017],\n",
+       "       [-0.01129631, -0.01783906, -0.00475356, ...,  0.00327633,\n",
+       "         0.02389986, -0.00778396],\n",
+       "       [-0.01143675,  0.0047288 ,  0.00331243, ..., -0.00981264,\n",
+       "        -0.01178423,  0.01755549],\n",
+       "       [-0.01705313, -0.03579557,  0.00813337, ..., -0.02260159,\n",
+       "        -0.00324388,  0.02308217]])"
+      ]
+     },
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,73 +390,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([ 1,  1, -1, -1,  1,  1])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#below is a dictionary that maps entity names to their respective sentiment\n",
-    "predictions_nb = nb_model.predict(preprocessed_headlines)\n",
+    "loaded_nb_model = joblib.load('nb_model.pkl')\n",
+    "predictions_nb = loaded_nb_model.predict(preprocessed_headlines)\n",
     "predictions_nb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1, -1, -1,  1,  1, -1,  1,  1])"
+       "array([ 1,  1, -1, -1,  1,  1])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predictions_knn = knnModel.predict(preprocessed_headlines)\n",
+    "loaded_knn_model = joblib.load('knn_model.pkl')\n",
+    "predictions_knn = loaded_nb_model.predict(preprocessed_headlines)\n",
     "predictions_knn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Alphabet': -1,\n",
-       " 'Cloud Computing': -1,\n",
-       " 'FTC': -1,\n",
-       " '8': -1,\n",
-       " 'Aussie Risks Bigger Losses Versus Yen': -1,\n",
-       " 'BOJ': -1,\n",
-       " 'Canadian': 1,\n",
-       " 'Evacuations': 1,\n",
-       " 'Tech Falls': 1,\n",
-       " 'Late Hours': 1,\n",
-       " 'Boeing': -1,\n",
-       " '737': -1,\n",
-       " 'MAX': -1,\n",
-       " 'China': -1,\n",
-       " 'next two decades': 1}"
+       "{'Tesla': 1,\n",
+       " 'Ford': 1,\n",
+       " 'Krugman': -1,\n",
+       " 'Fed': -1,\n",
+       " '3-month': -1,\n",
+       " 'Warner Bros.': 1,\n",
+       " 'NBA': 1,\n",
+       " '$77 billion': 1,\n",
+       " 'One year': 1,\n",
+       " 'Overstock.com': 1}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,6 +466,55 @@
     "    for ent in doc.ents:\n",
     "        knn_res[ent.text] = predictions_knn[i]\n",
     "knn_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#matching the return values with the actual companies\n",
+    "df_sp500 = pd.read_csv('sp500.csv')\n",
+    "df_sp500.head()\n",
+    "#using only Symbol and Security\n",
+    "df_sp500 = df_sp500[['Symbol', 'Security']]\n",
+    "df_sp500.head()\n",
+    "df_sp500.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mapping the entities to the actual companies\n",
+    "new_knn_res = {}\n",
+    "for entity, sentiment in knn_res.items():\n",
+    "    for i, row in df_sp500.iterrows():\n",
+    "        if entity in row.Security:\n",
+    "            new_knn_res[row.Symbol] = sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'TSLA': 1, 'F': 1, 'FRT': -1, 'FDX': -1, 'WBD': 1}"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_knn_res"
    ]
   }
  ],
