feat: project completion

--- a/backend/golang/ai/nlp.ipynb
+++ b/backend/golang/ai/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "import joblib\n"
+    "import joblib\n",
+    "import pickle\n"
    ]
   },
   {
@@ -334,24 +335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['nb_model.pkl']"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#save the model\n",
-    "joblib.dump(nb_model, 'nb_model.pkl')\n",
-    "joblib.dump(knnModel, 'knn_model.pkl')"
+    "#joblib.dump(nb_model, 'nb_model.pkl')\n",
+    "#joblib.dump(knnModel, 'knn_model.pkl')\n",
+    "\n",
+    "#save the model using pickle\n",
+    "pickle.dump(knnModel, open('knn_model.pkl', 'wb'))"
    ]
   },
   {
